--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,24 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
+
       <%= yield %>
     </main>
   </body>
+  <p class="navbar-text float-right">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
+      <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "navbar-link" %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, class: "navbar-link"  %> |
+      <%= link_to "Login", new_user_session_path, class: "navbar-link"  %>
+    <% end %>
+  </p>
 </html>
