--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,17 @@
   <head>
     <title>Shopapp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="assets/stylesheets/application.tailwind.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/stylesheets/application.css">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
@@ -12,6 +23,7 @@
   </head>
 
   <body>
+  <%= render "layouts/shared/header" %>
     <main class="container mx-auto mt-28 px-5 flex">
       <% if notice %>
         <p class="alert alert-success"><%= notice %></p>
@@ -22,6 +34,7 @@
 
       <%= yield %>
     </main>
+  <%= render "layouts/shared/footer" %>
   </body>
   <p class="navbar-text float-right">
     <% if user_signed_in? %>
