--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 
   <body>
   <%= render "layouts/shared/header" %>
+  <%= render "layouts/shared/navbar" %>
     <main class="container mx-auto mt-28 px-5 flex">
       <% if notice %>
         <p class="alert alert-success"><%= notice %></p>
