--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -43,7 +43,19 @@
         <a href="#" class="text-gray-200 hover:text-white transition">About us</a>
         <a href="#" class="text-gray-200 hover:text-white transition">Contact us</a>
       </div>
-      <a href="pages/login.html" class="text-gray-200 hover:text-white transition">Login</a>
+<!--      <a href="pages/login.html" class="text-gray-200 hover:text-white transition">Login</a>-->
     </div>
+    <p class="navbar-text float-right">
+      <% if user_signed_in? %>
+        Logged in as <strong><%= current_user.email %></strong>.
+        <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
+        <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "navbar-link" %>
+      <% else %>
+        <div class="py-4">
+          <%= link_to "Sign up", new_user_registration_path, class: "navbar-link"  %> |
+          <%= link_to "Login", new_user_session_path, class: "navbar-link"  %>
+        </div>
+      <% end %>
+    </p>
   </div>
 </nav>
