--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,9 @@
   <head>
     <title>Shopapp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="assets/stylesheets/application.tailwind.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet">
 
     <link rel="stylesheet" href="assets/stylesheets/application.css">
     <%= csrf_meta_tags %>
@@ -23,10 +17,8 @@
   </head>
 
   <body>
-  <div class="flex flex-col">
-    <%= render "layouts/shared/header" %>
-    <%= render "layouts/shared/navbar" %>
-  </div>
+  <%= render "layouts/shared/header" %>
+  <%= render "layouts/shared/navbar" %>
     <main class="container mx-auto mt-28 px-5 flex">
       <% if notice %>
         <p class="alert alert-success"><%= notice %></p>
@@ -39,14 +31,4 @@
     </main>
   <%= render "layouts/shared/footer" %>
   </body>
-  <p class="navbar-text float-right">
-    <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
-      <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "navbar-link" %>
-    <% else %>
-      <%= link_to "Sign up", new_user_registration_path, class: "navbar-link"  %> |
-      <%= link_to "Login", new_user_session_path, class: "navbar-link"  %>
-    <% end %>
-  </p>
 </html>
