--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,61 +1,29 @@
 <nav class="bg-gray-800">
   <div class="container flex">
-    <div class="px-8 py-4 bg-primary md:flex items-center cursor-pointer relative group hidden">
-                <span class="text-white">
-                    <i class="fa-solid fa-bars"></i>
-                </span>
-      <span class="capitalize ml-2 text-white hidden">All Categories</span>
-
-      <!-- dropdown -->
-      <div
-        class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible">
-        <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-          <%= image_tag "icons/sofa.svg", {alt: "sofa", class: "w-5 h-5 object-contain"} %>
-          <span class="ml-6 text-gray-600 text-sm">Sofa</span>
-        </a>
-        <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-          <%= image_tag "icons/terrace.svg", {alt: "terrace", class: "w-5 h-5 object-contain"} %>
-          <span class="ml-6 text-gray-600 text-sm">Terarce</span>
-        </a>
-        <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-          <%= image_tag "icons/bed.svg", {alt: "bed", class: "w-5 h-5 object-contain"} %>
-          <span class="ml-6 text-gray-600 text-sm">Bed</span>
-        </a>
-        <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-          <%= image_tag "icons/office.svg", {alt: "office", class: "w-5 h-5 object-contain"} %>
-          <span class="ml-6 text-gray-600 text-sm">office</span>
-        </a>
-        <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-          <%= image_tag "icons/outdoor-cafe.svg", {alt: "outdoor", class: "w-5 h-5 object-contain"} %>
-          <span class="ml-6 text-gray-600 text-sm">Outdoor</span>
-        </a>
-        <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
-          <%= image_tag "icons/bed-2.svg", {alt: "Mattress", class: "w-5 h-5 object-contain"} %>
-          <span class="ml-6 text-gray-600 text-sm">Mattress</span>
-        </a>
-      </div>
-    </div>
 
     <div class="flex items-center justify-between flex-grow md:pl-12 py-5">
       <div class="flex items-center space-x-6 capitalize">
-        <a href="index.html" class="text-gray-200 hover:text-white transition">Home</a>
-        <a href="pages/shop.html" class="text-gray-200 hover:text-white transition">Shop</a>
+        <a href="#" class="text-gray-200 hover:text-white transition">Home</a>
+        <a href="#" class="text-gray-200 hover:text-white transition">Shop</a>
         <a href="#" class="text-gray-200 hover:text-white transition">About us</a>
         <a href="#" class="text-gray-200 hover:text-white transition">Contact us</a>
       </div>
-<!--      <a href="pages/login.html" class="text-gray-200 hover:text-white transition">Login</a>-->
     </div>
-    <p class="navbar-text float-right">
+    <div class="navbar-text float-right">
       <% if user_signed_in? %>
         Logged in as <strong><%= current_user.email %></strong>.
         <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
         <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "navbar-link" %>
       <% else %>
-        <div class="py-4">
-          <%= link_to "Sign up", new_user_registration_path, class: "navbar-link"  %> |
-          <%= link_to "Login", new_user_session_path, class: "navbar-link"  %>
+        <div class="py-5">
+          <%- if controller_name != 'sessions' %>
+            <%= link_to "Login", new_session_path(resource_name), class: "navbar-link text-gray-800 hover:text-white transition" %>
+          <% end %>
+          <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+            <%= link_to "Sign up", new_registration_path(resource_name), class: "navbar-link text-gray-800 hover:text-white transition" %>
+          <% end %>
         </div>
       <% end %>
-    </p>
+    </div>
   </div>
 </nav>
