--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="py-3 shadow-sm bg-white">
   <div class="container flex items-center justify-between">
-    <a href="index.html">
+    <a href="#">
       <%= image_tag "logo.svg" %>
     </a>
 
