--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -1,12 +1,7 @@
 <footer class="bg-white pt-16 pb-12 border-t border-gray-100">
-  <div class="container grid grid-cols-1 ">
-    <div class="col-span-1 space-y-4">
+  <div class="container grid grid-cols-3">
+    <div class="col-span-1 space-y-4 px-4">
       <%= image_tag "logo.svg" %>
-      <div class="mr-2">
-        <p class="text-gray-500">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, hic?
-        </p>
-      </div>
       <div class="flex space-x-5">
         <a href="#" class="text-gray-400 hover:text-gray-500"><i
           class="fa-brands fa-facebook-square"></i></a>
@@ -36,7 +31,6 @@
           <h3 class="text-sm font-semibold text-gray-400 uppercase tracking-wider">Support</h3>
           <div class="mt-4 space-y-4">
             <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Pricing</a>
-            <!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Documentation</a> -->
             <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Guides</a>
             <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">API Status</a>
           </div>
@@ -57,7 +51,6 @@
           <h3 class="text-sm font-semibold text-gray-400 uppercase tracking-wider">Support</h3>
           <div class="mt-4 space-y-4">
             <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Pricing</a>
-            <!-- <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Documentation</a> -->
             <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">Guides</a>
             <a href="#" class="text-base text-gray-500 hover:text-gray-900 block">API Status</a>
           </div>
