--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
 
     <div class="flex items-center justify-between flex-grow md:pl-12 py-5">
       <div class="flex items-center space-x-6 capitalize">
-        <a href="#" class="text-gray-200 hover:text-white transition">Home</a>
+        <%= link_to "Home", root_path, class: "text-gray-200 hover:text-white transition" %>
         <a href="#" class="text-gray-200 hover:text-white transition">Shop</a>
         <a href="#" class="text-gray-200 hover:text-white transition">About us</a>
         <a href="#" class="text-gray-200 hover:text-white transition">Contact us</a>
@@ -11,17 +11,12 @@
     </div>
     <div class="navbar-text float-right">
       <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
         <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
         <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "navbar-link" %>
       <% else %>
         <div class="py-5">
-          <%- if controller_name != 'sessions' %>
-            <%= link_to "Login", new_session_path(resource_name), class: "navbar-link text-gray-800 hover:text-white transition" %>
-          <% end %>
-          <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-            <%= link_to "Sign up", new_registration_path(resource_name), class: "navbar-link text-gray-800 hover:text-white transition" %>
-          <% end %>
+          <%= link_to "Login", new_user_session_path, class: "navbar-link text-gray-800 hover:text-white transition" %> |
+          <%= link_to "Sign up", new_user_registration_path, class: "navbar-link text-gray-800 hover:text-white transition" %>
         </div>
       <% end %>
     </div>
