--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,24 +8,24 @@
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-      <div class="space-y-2">
+      <div class="space-y-4">
         <div class="field">
-          <%= f.label :name, class: "text-gray-600 mb-2 block" %><br />
+          <%= f.label :name, class: "text-gray-600" %><br />
           <%= f.text_field :name, class: "block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400" %>
         </div>
         <div class="field">
-          <%= f.label :email, class: "text-gray-600 mb-2 block" %><br />
+          <%= f.label :email, class: "text-gray-600" %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400" %>
         </div>
         <div class="field">
-          <%= f.label :password, class: "text-gray-600 mb-2 block" %>
+          <%= f.label :password, class: "text-gray-600" %>
           <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %><br />
           <%= f.password_field :password, autocomplete: "new-password", class: "block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400", placeholder: "*******" %>
         </div>
         <div class="field">
-          <%= f.label :password_confirmation, class: "" %><br />
+          <%= f.label :password_confirmation, class: "text-gray-600" %><br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "block w-full border border-gray-300 px-4 py-3 text-gray-600 text-sm rounded focus:ring-0 focus:border-primary placeholder-gray-400", placeholder: "*******" %>
         </div>
       </div>
@@ -38,7 +38,7 @@
 
     <div class="mt-4 text-center text-gray-600">
       <p>Already have account?
-        <%= link_to "Login now", new_session_path(resource_name)%>
+        <%= link_to "Login now", new_session_path(resource_name), class: "text-primary" %>
       </p>
     </div>
   </div>
