--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -11,12 +11,18 @@
     </div>
     <div class="navbar-text float-right">
       <% if user_signed_in? %>
-        <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
-        <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "navbar-link" %>
-      <% else %>
         <div class="py-5">
-          <%= link_to "Login", new_user_session_path, class: "navbar-link text-gray-800 hover:text-white transition" %> |
-          <%= link_to "Sign up", new_user_registration_path, class: "navbar-link text-gray-800 hover:text-white transition" %>
+          <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "text-gray-200 hover:text-white transition" %>
+        </div>
+      <% else %>
+        <div class="py-5 space-x-4">
+          <% if controller_name != 'registrations' %>
+            <%= link_to "Sign up", new_user_registration_path, class: "text-gray-200 hover:text-white transition" %>
+          <% end %>
+
+          <% if controller_name != 'sessions' %>
+            <%= link_to "Login", new_user_session_path, class: "text-gray-200 hover:text-white transition" %>
+          <% end %>
         </div>
       <% end %>
     </div>
