--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -1,7 +1,10 @@
 <footer class="bg-white pt-16 pb-12 border-t border-gray-100">
   <div class="container grid grid-cols-3">
     <div class="col-span-1 space-y-4 px-4">
-      <%= image_tag "logo.svg" %>
+      <%= image_tag "logo.svg", class: "w-30" %>
+      <div class="mr-2">
+        <p class="text-gray-500">Discover a seamless and secure shopping experience with our eCommerce demo project, offering a wide range of products to meet your needs.</p>
+      </div>
       <div class="flex space-x-5">
         <a href="#" class="text-gray-400 hover:text-gray-500"><i
           class="fa-brands fa-facebook-square"></i></a>
