--- a/app/views/layouts/shared/_flash.html.erb
+++ b/app/views/layouts/shared/_flash.html.erb
@@ -4,3 +4,11 @@
 <% if alert %>
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>
+
+<% if flash.any? %>
+  <% flash.each do |type, msg| %>
+    <div class="py-2 px-4 font-bold msg-<%= type %>">
+      <%= msg %>
+    </div>
+  <% end %>
+<% end %>
