forms the product filtering

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,12 +9,12 @@
         <h3 class="text-xl text-gray-800 mb-3 uppercase font-medium">Categories</h3>
         <div class="space-y-2">
           <div class="flex flex-col items-left">
-            <% Category.all.each_with_index do |category, idx| %>
-              <div class="">
-                <input type="checkbox" name="cat-2" id="cat-2"
-                       class="text-primary focus:ring-0 rounded-sm cursor-pointer">
+            <% Category.all.each do |category| %>
+              <div>
+                <%= check_box_tag('category_tag', value = category, checked = false,
+                                 options = { class: "product_category" })%>
                 <label for="cat-2" class="text-gray-600 ml-3 cursor-pointer">
-                  <%= category.name  %>
+                  <%= category.name.capitalize %>
                   (<%= category.products.count %>)
                 </label>
               </div>
@@ -64,35 +64,45 @@
       <% @products.each do |product| %>
         <div class="bg-white shadow rounded overflow-hidden group">
           <div class="relative">
-            <% product.images.each do |image| %>
-              <%= image_tag image, size: "20*20" %>
-            <% end %>
-            <div class="pt-4 pb-3 px-4 flex flex-col">
-              <a href="#">
-                <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-primary transition">
-                  <%= product.name %>
-                </h4>
+            <%= image_tag product.images.sample, alt: "product 1", class: "w-full h-60 object-contain" %>
+            <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center
+                justify-center gap-2 opacity-0 group-hover:opacity-100 transition">
+              <a href="#"
+                 class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition"
+                 title="view product">
+                <i class="fa-solid fa-magnifying-glass"></i>
               </a>
-              <div class="flex items-baseline mb-1 space-x-2">
-                <p class="text-xl text-primary font-semibold">
-                  Rs. <%= product.price %>
-                </p>
-              </div>
-              <div class="flex items-center">
-                <div class="flex gap-1 text-sm text-yellow-400">
-                  <span><i class="fa-solid fa-star"></i></span>
-                  <span><i class="fa-solid fa-star"></i></span>
-                  <span><i class="fa-solid fa-star"></i></span>
-                  <span><i class="fa-solid fa-star"></i></span>
-                  <span><i class="fa-solid fa-star"></i></span>
-                </div>
-              </div>
-              <div>
-                <%= link_to "Add To Cart", "", class: "block w-full py-1 text-center text-white bg-primary border border-primary rounded-b hover:bg-transparent hover:text-primary transition" %>
-              </div>
+              <a href="#"
+                 class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition"
+                 title="add to wishlist">
+                <i class="fa-solid fa-heart"></i>
+              </a>
             </div>
-
           </div>
+          <div class="pt-4 pb-3 px-4">
+            <a href="#">
+              <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-primary transition">
+                Guyer
+                Chair</h4>
+            </a>
+            <div class="flex items-baseline mb-1 space-x-2">
+              <p class="text-xl text-primary font-semibold">$45.00</p>
+              <p class="text-sm text-gray-400 line-through">$55.90</p>
+            </div>
+            <div class="flex items-center">
+              <div class="flex gap-1 text-sm text-yellow-400">
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star"></i></span>
+                <span><i class="fa-solid fa-star"></i></span>
+              </div>
+              <div class="text-xs text-gray-500 ml-3">(150)</div>
+            </div>
+          </div>
+          <a href="#"
+             class="block w-full py-1 text-center text-white bg-primary border border-primary rounded-b hover:bg-transparent hover:text-primary transition">Add
+            to cart</a>
         </div>
       <% end %>
     </div>
