--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,39 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<!-- wrapper -->
+<div class="container grid grid-cols-12 items-start gap-6 pt-4 pb-16">
+    <%= render "shared/profile_info_sidebar" %>
+    <!-- info -->
+    <div class="col-span-9 shadow rounded px-6 pt-5 pb-7">
+        <h4 class="text-lg font-medium capitalize mb-4">
+            Profile information
+        </h4>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="grid grid-cols-4 gap-4">
+              <div>
+                <%= f.label :email %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'input-box' %>
+              </div>
+              <div>
+                <%= f.label :password %>
+                <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: 'input-box' %>
+              </div>
+              <div>
+                <%= f.label :password_confirmation %>
+                <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "new-password", class: 'input-box' %>
+              </div>
+              <div>
+                <%= f.label :current_password %>
+                <%= f.password_field :current_password, autofocus: true, autocomplete: "new-password", class: 'input-box' %>
+              </div>
+          </div>
+          <div class="mt-4 text-center">
+              <%= f.submit "Submit Changes", class: "w-auto text-center py-3 px-4 text-center text-white bg-primary border border-primary rounded-md hover:bg-transparent hover:text-primary transition font-medium" %>
+          </div>
+        <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    </div>
+    <!-- ./info -->
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
+<!-- ./wrapper -->
