--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,5 +1,22 @@
 <nav class="bg-gray-800">
   <div class="container flex">
+    <div class="px-8 py-4 bg-primary flex items-center cursor-pointer relative group">
+        <span class="text-white">
+            <i class="fa-solid fa-bars"></i>
+        </span>
+        <span class="capitalize ml-2 text-white">All Categories</span>
+
+        <!-- dropdown -->
+        <div
+            class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible">
+            <% Category.all.each do |category| %>
+              <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+                <%= image_tag category.products.sample.images.sample, class: "w-5 h-5 object-contain" %>
+                <span class="ml-6 text-gray-600 text-sm"><%= category.name.capitalize %></span>
+              </a>
+            <% end %>
+        </div>
+    </div>
 
     <div class="flex items-center justify-between flex-grow md:pl-12 py-5">
       <div class="flex items-center space-x-6 capitalize">
