--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,18 +29,16 @@
       <% @products.each do |product| %>
         <div class="bg-white shadow rounded overflow-hidden group">
           <div class="relative">
-            <%= image_tag product.images.sample, alt: "#{product.name}", class: "w-full h-60 object-contain" %>
-            <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center
-                justify-center gap-2 opacity-0 group-hover:opacity-100 transition">
+            <% if product.images.count > 1 %>
+              <%= render partial: "shared/carousel", locals: { images: product.images } %>
+            <% else %>
+              <%= image_tag product.images.sample, class: "w-full h-60 object-contain" %>
+            <% end %>
+            <div class="absolute inset-0 z-20 bg-black bg-opacity-40 flex items-center justify-center gap-2 opacity-0 group-hover:opacity-100 transition">
               <a href="#"
-                 class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition"
-                 title="view product">
+                class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition"
+                title="view product">
                 <i class="fa-solid fa-magnifying-glass"></i>
-              </a>
-              <a href="#"
-                 class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition"
-                 title="add to wishlist">
-                <i class="fa-solid fa-heart"></i>
               </a>
             </div>
           </div>
