--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -25,50 +25,11 @@
       </div>
     </div>
 
-    <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
-      <% @products.each do |product| %>
-        <div class="bg-white shadow rounded overflow-hidden group">
-          <div class="relative">
-            <% if product.images.count > 1 %>
-              <%= render partial: "shared/carousel", locals: { images: product.images } %>
-            <% else %>
-              <%= image_tag product.images.sample, class: "w-full h-60 object-contain" %>
-            <% end %>
-            <div class="absolute inset-0 z-20 bg-black bg-opacity-40 flex items-center justify-center gap-2 opacity-0 group-hover:opacity-100 transition">
-              <a href="#"
-                class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition"
-                title="view product">
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </a>
-            </div>
-          </div>
-          <div class="pt-4 pb-3 px-4">
-            <a href="#">
-              <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-primary transition">
-                Guyer
-                Chair</h4>
-            </a>
-            <div class="flex items-baseline mb-1 space-x-2">
-              <p class="text-xl text-primary font-semibold">$45.00</p>
-              <p class="text-sm text-gray-400 line-through">$55.90</p>
-            </div>
-            <div class="flex items-center">
-              <div class="flex gap-1 text-sm text-yellow-400">
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star"></i></span>
-                <span><i class="fa-solid fa-star"></i></span>
-              </div>
-              <div class="text-xs text-gray-500 ml-3">(150)</div>
-            </div>
-          </div>
-          <a href="#"
-             class="block w-full py-1 text-center text-white bg-primary border border-primary rounded-b hover:bg-transparent hover:text-primary transition">Add
-            to cart</a>
-        </div>
-      <% end %>
-    </div>
+    <%= turbo_frame_tag "productList" do %>
+      <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
+        <%= render partial: "product", collection: @products, as: :product %>
+      </div>
+    <% end %>
   </div>
   <!-- ./products -->
 </div>
