--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <!-- shop wrapper -->
 <div class="container grid md:grid-cols-4 grid-cols-2 gap-6 pt-16 pb-16 items-start">
-  <%= render "shared/sidebar/product" %>
+  <%= render "shared/category_filters" %>
 
   <!-- products -->
   <div class="col-span-3">
@@ -25,9 +25,9 @@
       </div>
     </div>
 
-    <%= turbo_frame_tag "productList" do %>
+    <%= turbo_frame_tag "products" do %>
       <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
-        <%= render partial: "product", collection: @products, as: :product %>
+        <%= render @products %>
       </div>
     <% end %>
   </div>
