--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,30 +4,16 @@
 
   <!-- products -->
   <div class="col-span-3">
-    <div class="flex items-center mb-4">
-      <select name="sort" id="sort"
-              class="w-44 text-sm text-gray-600 py-3 px-4 border-gray-300 shadow-sm rounded focus:ring-primary focus:border-primary">
-        <option value="">Default sorting</option>
-        <option value="price-low-to-high">Price low to high</option>
-        <option value="price-high-to-low">Price high to low</option>
-        <option value="latest">Latest product</option>
-      </select>
-
-      <div class="flex gap-2 ml-auto">
-        <div
-          class="border border-primary w-10 h-9 flex items-center justify-center text-white bg-primary rounded cursor-pointer">
-          <i class="fa-solid fa-grip-vertical"></i>
-        </div>
-        <div
-          class="border border-gray-300 w-10 h-9 flex items-center justify-center text-gray-600 rounded cursor-pointer">
-          <i class="fa-solid fa-list"></i>
-        </div>
-      </div>
-    </div>
-
     <%= turbo_frame_tag "products" do %>
-      <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
-        <%= render @products %>
+      <div class="flex flex-col items-center">
+        <% if @products.present? %>
+          <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
+            <%= render @products %>
+          </div>
+        <% else %>
+          <p class="text-center text-primary font-bold text-lg tracking-wider leading-loose capitalize">No Product found</p>
+        <% end %>
+       <%== pagy_nav(@pagy) %>
       </div>
     <% end %>
   </div>
