--- a/app/views/products/index.turbo_stream.erb
+++ b/app/views/products/index.turbo_stream.erb
@@ -1,5 +1,12 @@
 <%= turbo_stream.update "products" do %>
-  <div class="grid md:grid-cols-3 grid-cols-2 gap-6" id="products">
-    <%= render partial: "products/product", collection: @products %>
+  <div class="flex flex-col items-center" id="products">
+    <% if @products.present? %>
+      <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
+        <%= render @products %>
+      </div>
+    <% else %>
+      <p class="text-center text-primary font-bold text-lg tracking-wider leading-loose capitalize">No Product found</p>
+    <% end %>
+    <%== pagy_nav(@pagy) %>
   </div>
 <% end %>
