--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-white pt-16 pb-12 border-t border-gray-100">
+<footer class="bg-gray-800 pt-16 pb-12 border-t border-gray-100">
   <div class="container grid grid-cols-3">
     <div class="col-span-1 space-y-4 px-4">
       <%= image_tag "logo.svg", class: "w-30" %>
