--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="bg-gray-800">
-  <div class="container flex">
-    <div class="px-8 py-4 bg-primary flex items-center cursor-pointer relative group">
+  <div class="md:container flex">
+    <div class="px-8 py-4 bg-primary mr-2 flex items-center cursor-pointer relative group">
         <span class="text-white">
             <i class="fa-solid fa-bars"></i>
         </span>
@@ -8,12 +8,14 @@
 
         <!-- dropdown -->
         <div
-            class="absolute w-full left-0 top-full bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible">
+            class="absolute w-full left-0 top-full z-30 bg-white shadow-md py-3 divide-y divide-gray-300 divide-dashed opacity-0 group-hover:opacity-100 transition duration-300 invisible group-hover:visible">
             <% Category.all.each do |category| %>
-              <a href="#" class="flex items-center px-6 py-3 hover:bg-gray-100 transition">
+              <%= link_to products_path(query: { category_id_eq: category.id }),
+                class: "flex items-center px-6 py-3 hover:bg-gray-100 transition",
+                data: { turbo_frame: 'products', controller: 'dropdown', 'turbo-action' => 'advance', action: 'click->dropdown#clearCategoryFilters', 'dropdown-target' => 'dropdown'  } do %>
                 <%= image_tag category.products.sample.images.sample, class: "w-5 h-5 object-contain" %>
-                <span class="ml-6 text-gray-600 text-sm"><%= category.name.capitalize %></span>
-              </a>
+                <span class="categoryLink ml-6 text-gray-600 text-sm"><%= category.name.capitalize %></span>
+              <% end %>
             <% end %>
         </div>
     </div>
@@ -24,7 +26,7 @@
         <a href="#" class="text-gray-200 hover:text-white transition">Shop</a>
       </div>
     </div>
-    <div class="navbar-text float-right">
+    <div class="navbar-text float-right mr-5 md:mr-0">
       <% if user_signed_in? %>
         <div class="py-5">
           <%= link_to "Logout", destroy_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "text-gray-200 hover:text-white transition" %>
