--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,9 +3,9 @@
     <%= image_tag product.images.sample, class: "w-full h-60 object-contain" %>
   </div>
   <div class="pt-4 pb-3 px-4">
-    <a href="#">
+    <%= link_to product_path(product.id), data: { turbo_frame: '_top' } do %>
       <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-primary line-clamp-1 transition"><%= product.name %></h4>
-    </a>
+    <% end %>
     <div class="flex items-baseline mb-1 space-x-2">
       <p class="text-xl text-primary font-semibold">$<%= product.price %></p>
       <p class="text-sm text-gray-400 line-through">$<%= product.price %></p>
