--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,17 +4,15 @@
 
   <!-- products -->
   <div class="col-span-3">
-    <%= turbo_frame_tag "products" do %>
-      <div class="flex flex-col items-center">
-        <% if @products.present? %>
-          <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
-            <%= render @products %>
-          </div>
-        <% else %>
-          <p class="text-center text-primary font-bold text-lg tracking-wider leading-loose capitalize">No Product found</p>
-        <% end %>
-       <%== pagy_nav(@pagy) %>
-      </div>
+    <%= turbo_frame_tag "products", class: 'flex flex-col items-center' do %>
+      <% if @products.present? %>
+        <div class="grid md:grid-cols-3 grid-cols-2 gap-6">
+          <%= render @products %>
+        </div>
+        <%== pagy_nav(@pagy) %>
+      <% else %>
+        <p class="text-center text-primary font-bold text-lg tracking-wider leading-loose capitalize">No Product found</p>
+      <% end %>
     <% end %>
   </div>
   <!-- ./products -->
