updated for category sort

--- a/app/views/shared/_category_filters.html.erb
+++ b/app/views/shared/_category_filters.html.erb
@@ -2,7 +2,7 @@
 
 <div class="col-span-1 bg-white px-2 pb-6 shadow rounded overflow-hidden hidden md:block">
   <div class="divide-y divide-gray-200 space-y-5">
-    <%= search_form_for @query, url: products_path, method: :get, data: { controller: 'filter', turbo_stream: 'true', turbo_frame: 'products', action: "input->filter#toggle" } do |f| %>
+    <%= search_form_for @query, url: products_path, method: :get, data: { controller: 'filter', turbo_stream: 'true', turbo_frame: 'products' } do |f| %>
       <div>
         <h3 class="text-xl text-gray-800 mb-3 uppercase font-medium">Categories</h3>
         <div class="space-y-2">
@@ -13,7 +13,7 @@
                     {
                       multiple: true, class: "product_category category-checkbox-filters",
                       checked: category_selected?(params[:query], category.id),
-                      data: { 'filter-target' => 'checkbox' },
+                      data: { 'filter-target' => 'checkbox', action: 'change->filter#toggle' },
                     },
                     category.id,
                     nil
@@ -31,9 +31,9 @@
       <div class="pt-4">
         <h3 class="text-xl text-gray-800 mb-3 uppercase font-medium">Price</h3>
           <div class="mt-4 flex items-center">
-            <%= f.number_field :price_gteq, min: 0, class: "w-full border-gray-300 focus:border-primary rounded focus:ring-0 px-3 py-1 text-gray-600 shadow-sm", placeholder: 'min', data: { 'filter-target' => 'input' } %>
+            <%= f.number_field :price_gteq, min: 0, class: "w-full border-gray-300 focus:border-primary rounded focus:ring-0 px-3 py-1 text-gray-600 shadow-sm", placeholder: 'min', data: { action: 'input->filter#range', 'filter-target' => 'input' } %>
             <span class="mx-3 text-gray-500">-</span>
-            <%= f.number_field :price_lteq, min: 0, class: "w-full border-gray-300 focus:border-primary rounded focus:ring-0 px-3 py-1 text-gray-600 shadow-sm", placeholder: 'max', data: { 'filter-target' => 'input' } %>
+            <%= f.number_field :price_lteq, min: 0, class: "w-full border-gray-300 focus:border-primary rounded focus:ring-0 px-3 py-1 text-gray-600 shadow-sm", placeholder: 'max', data: { action: 'input->filter#range', 'filter-target' => 'input' } %>
           </div>
       </div>
 
@@ -42,7 +42,7 @@
       <h3 class="text-xl text-gray-800 mb-3 uppercase font-medium">
         <%= f.label :s, t('Sort By') %>
       </h3>
-        <div data-controller="product-sort" class="flex items-center mb-4">
+        <div data-action="click->filter#update" data-filter-target="select" class="flex items-center mb-4">
           <%= f.select :s, options_for_select(
             [[t('Default'),''],
              [t('Price low to high'),'price asc'],
