review sort feature

--- a/app/views/reviews/create.turbo_stream.erb
+++ b/app/views/reviews/create.turbo_stream.erb
@@ -1,3 +1,14 @@
 <%= turbo_stream.prepend dom_id(@product, "reviews") do %>
   <%= render @review %>
 <% end %>
+
+<%= turbo_stream.update "product_rating" do %>
+  <div class="flex items-center mb-4">
+    <%= render 'reviews/review_rating', value: average_rating(@product) %>
+    <div class="text-xs text-gray-500 ml-3">
+      <% if @product.reviews %>
+        <p>(<%= pluralize(@product.reviews.count, 'review') %>)</p>
+      <% end %>
+    </div>
+  </div>
+<% end %>
