--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,16 +9,17 @@
 
   <div>
     <h2 class="text-3xl font-medium uppercase mb-2 py-5"><%= @product.name %></h2>
-    <div class="flex items-center mb-4">
-      <div class="flex gap-1 text-sm text-yellow-400">
-        <span><i class="fa-solid fa-star"></i></span>
-        <span><i class="fa-solid fa-star"></i></span>
-        <span><i class="fa-solid fa-star"></i></span>
-        <span><i class="fa-solid fa-star"></i></span>
-        <span><i class="fa-solid fa-star"></i></span>
+    <%= turbo_frame_tag "product_rating" do %>
+      <div class="flex items-center mb-4">
+        <%= render 'reviews/review_rating', rating: average_rating(@product) %>
+        <div class="text-xs text-gray-500 ml-3">
+          <% if @product.reviews %>
+            <p>(<%= pluralize(@product.reviews.count, 'review') %>)</p>
+          <% end %>
+        </div>
       </div>
-      <div class="text-xs text-gray-500 ml-3">(150 Reviews)</div>
-    </div>
+    <% end %>
+
     <div class="space-y-2">
       <p class="text-gray-800 font-semibold space-x-2">
         <span>Availability: </span>
@@ -77,28 +78,27 @@
   </div>
 </div>
 
-<!-- reviews -->
-<!--<div class="container pb-16">-->
-<!--  <h3 class="border-b border-gray-200 font-roboto text-gray-800 pb-3 font-medium">Product Review</h3>-->
-<!--  <div class="w-3/5 pt-6">-->
-    <%# if user_signed_in? %>
-      <%#= render 'reviews/review', product: @product %>
-      <%#= link_to "Write a review", new_product_review_path(@product.id), class: "btn btn--primary" %>
-    <%# else %>
-      <%#= "Sign-in to write a review" %>
-    <%# end %>
-<!--  </div>-->
-<!--</div>-->
-
 <!-- customer reviews -->
 
-<% if current_user %>
-  <section class="container pb-16">
-    <h3 class="border-b border-gray-200 font-roboto text-gray-800 pb-3 font-medium">Customer's Review</h3>
+<section class="container mb-4">
+  <h3 class="border-b border-gray-200 font-roboto text-gray-800 pb-3 font-medium">Customer's Review</h3>
+  <% if user_signed_in? %>
     <%= render "reviews/form", product: @product %>
-    <%= turbo_frame_tag dom_id(@product, "reviews") do %>
-      <%= render @reviews %>
-    <% end %>
-  </section>
-<% end %>
+  <% end %>
+  <div>
+    <div>
+      <%= turbo_frame_tag dom_id(@product, "reviews") do %>
+        <% if @product.reviews %>
+          <%= render @reviews %>
+          <%== pagy_nav(@pagy) %>
+        <% else %>
+          <%= 'No reviews yet' %>
+        <% end %>
+      <% end %>
+    </div>
 
+    <div>
+      <%= render 'reviews/review_sort', product: @product %>
+    </div>
+  </div>
+</section>
