--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,17 +1,20 @@
-<%= form_with(model: [product, Review.new]) do |form| %>
-  <div class="flex justify-around aligns-center">
-    <div>
-      <%= form.label :rating %>
-      <%= form.number_field :rating, in: 1..5, class: 'w-full border-gray-300 focus:border-primary rounded focus:ring-0 px-3 py-1 text-gray-600 shadow-sm' %>
+
+<div class="flex flex-col">
+  <%= form_with(model: [product, Review.new]) do |form| %>
+    <div class="flex justify-start space-x-4 mt-2">
+      <div class="flex items-center space-x-2">
+        <%= form.label :rating, class: 'inline mb-2 text-sm font-medium text-gray-600' %>
+        <%= form.select :rating, Review.ratings, include_blank: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+      </div>
+      <div class="flex items-center space-x-2">
+        <%= form.label :comment, class: 'inline mb-2 text-sm font-medium text-gray-600' %>
+        <%= form.text_field :comment, class: 'p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500', placeholder: 'Leave a comment...' %>
+      </div>
+      <div class="flex items-center space-x-2">
+        <div class="bg-primary border border-primary text-white px-2 py-2 font-medium	text-xs rounded uppercase flex items-center hover:bg-transparent hover:text-primary transition" >
+          <%= form.submit %>
+        </div>
+      </div>
     </div>
-
-    <div class="field">
-      <%= form.label :comment %>
-      <%= form.text_area :comment %>
-    </div>
-
-    <%= form.hidden_field :user_id, value: current_user.id %>
-
-    <%= form.submit %>
-  </div>
-<% end %>
+  <% end %>
+</div>
