--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,3 +1,13 @@
 <div class="review">
-  <%= review.comment %>
+  <article>
+    <div class="flex items-center mb-4 mt-4 space-x-4">
+      <div class="flex items-start space-x-2 space-y-1 font-medium capitalize dark:text-white">
+        <p><%= review.user.name %></p>
+        <div class="flex items-center mb-1">
+          <%= render 'reviews/review_rating', rating: review.rating_before_type_cast %>
+        </div>
+      </div>
+    </div>
+    <p class="mb-2 text-gray-500 dark:text-gray-400"><%= review.comment %></p>
+  </article>
 </div>
