--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -4,7 +4,7 @@
     <div class="flex justify-start space-x-4 mt-2">
       <div class="flex items-center space-x-2">
         <%= form.label :rating, class: 'inline mb-2 text-sm font-medium text-gray-600' %>
-        <%= form.select :rating, Review.ratings, include_blank: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
+        <%= form.select :rating, Review.ratings.keys, include_blank: true, class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500' %>
       </div>
       <div class="flex items-center space-x-2">
         <%= form.label :comment, class: 'inline mb-2 text-sm font-medium text-gray-600' %>
